[ACS-12053] Revert Direct Access URL changes from PR #1288 (#1297)